# medical-rag-rbac-assistant

./: .gitignore  README.md  pyproject.toml
frontend/app/: page.tsx
scripts/: create_collection.py  ingest_documents.py
src/medibot/: main.py
src/medibot/api/: __init__.py  dependencies.py
src/medibot/api/routes/: __init__.py  auth.py  chat.py  collections.py  health.py
src/medibot/auth/: jwt_handler.py  roles.py  users.py
src/medibot/config/: settings.py
src/medibot/database/: sqlite.py
src/medibot/llm/: provider.py
src/medibot/models/: document.py  requests.py  responses.py
src/medibot/rag/ingestion/: __init__.py  chunker.py  embeddings.py  metadata.py  parser.py
src/medibot/rag/prompts/: rag_prompt.py  sql_prompt.py
src/medibot/rag/retrieval/: __init__.py  hybrid_search.py  rbac_filter.py  reranker.py
src/medibot/rag/sql/: __init__.py  sql_executor.py  sql_generator.py  sql_rag.py
src/medibot/vectorstore/: qdrant.py
tests/: test_api.py  test_hybrid.py  test_sql_rag.py
